[package]
name = "bindable"
version = "0.1.0"
authors = ["Matt Fellenz <matt@felle.nz>"]
description = "An abstraction over an address that a server can bind to: either an IP address for TCP or a path for a Unix socket"
documentation = "https://docs.rs/bindable"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/mattfbacon/bindable"

[dependencies]
thiserror = "1"

[dependencies.actix-web]
version = "4"
optional = true

[dependencies.serde]
version = "1"
optional = true

[features]
default = ["with-serde"]
with-actix = ["actix-web"]
with-serde = ["serde"]
